--- a/rickroll.html
+++ b/rickroll.html
@@ -92,9 +92,9 @@
     <h1>💀 YOU JUST GOT BIRTHDAY RICK ROLLED 💀</h1>
 
     <!-- Spinning Images -->
-    <img src="https://i.imgur.com/4AiXzf8.jpeg" class="spin-img" style="top:100px; left:50px;">
-    <img src="https://i.imgur.com/4AiXzf8.jpeg" class="spin-img" style="top:300px; right:50px;">
-    <img src="https://i.imgur.com/4AiXzf8.jpeg" class="spin-img" style="bottom:100px; left:40%;">
+    <img src="Assets/Screenshot 2026-02-26 214014.png" class="spin-img" style="top:100px; left:50px;">
+    <img src="Assets/Screenshot 2026-02-26 214033.png" class="spin-img" style="top:300px; right:50px;">
+    <img src="Assets/Screenshot 2026-02-26 214101.png" class="spin-img" style="bottom:100px; left:40%;">
 
     <!-- Rick Roll Audio -->
     <audio id="rickAudio" autoplay loop>
