--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <title>For The Birthday Girl 🎀</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
     <style>
         body {
             margin: 0;
-            height: 100vh;
+            min-height: 100vh;
             background: linear-gradient(to top, #ffd6e8, #fff5fa);
             display: flex;
             justify-content: center;
@@ -16,62 +18,50 @@
             flex-direction: column;
             overflow: hidden;
             font-family: 'Pacifico', cursive;
-            animation: fadeIn 2s ease-in;
-        }
-
-        @keyframes fadeIn {
-            from {opacity: 0;}
-            to {opacity: 1;}
+            text-align: center;
+            padding: 20px;
         }
 
         h1 {
             color: #ff69b4;
-            font-size: 38px;
-            margin-bottom: 10px;
+            font-size: clamp(28px, 6vw, 42px);
         }
 
         p {
             color: #ff8ec7;
-            font-size: 18px;
+            font-size: clamp(16px, 3.5vw, 20px);
         }
 
         .volume-msg {
             font-size: 14px;
             color: #999;
-            margin-top: 5px;
         }
 
         button {
             margin-top: 25px;
-            padding: 12px 30px;
+            padding: 12px 28px;
             border: none;
             border-radius: 30px;
             background: #ff69b4;
             color: white;
-            font-size: 16px;
+            font-size: clamp(14px, 3.5vw, 18px);
             cursor: pointer;
-            transition: 0.3s;
             box-shadow: 0 0 15px #ff69b4;
         }
 
-        button:hover {
-            background: #ff1493;
-            transform: scale(1.08);
-            box-shadow: 0 0 25px #ff1493;
-        }
-
-        /* Swing */
         .swing-container {
             position: relative;
             margin-top: 40px;
-            height: 250px;
+            height: 220px;
+            max-width: 260px;
+            width: 100%;
             animation: swing 3s ease-in-out infinite;
             transform-origin: top center;
         }
 
         .rope {
-            width: 4px;
-            height: 120px;
+            width: 3px;
+            height: 110px;
             background: #d8a7b1;
             position: absolute;
             left: 50%;
@@ -79,85 +69,103 @@
         }
 
         .seat {
-            width: 120px;
-            height: 15px;
+            width: 110px;
+            height: 12px;
             background: #ffb6d9;
             position: absolute;
-            top: 120px;
+            top: 110px;
             left: 50%;
             transform: translateX(-50%);
             border-radius: 10px;
         }
 
-        /* Hello Kitty Sticker */
         .kitty {
             position: absolute;
-            top: 40px;
+            top: 35px;
             left: 50%;
             transform: translateX(-50%);
-            width: 90px;
-            animation: floatBounce 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes floatBounce {
-            from { transform: translateX(-50%) translateY(0px); }
-            to { transform: translateX(-50%) translateY(8px); }
+            width: clamp(60px, 18vw, 90px);
         }
 
         @keyframes swing {
-            0% { transform: rotate(-10deg); }
-            50% { transform: rotate(10deg); }
-            100% { transform: rotate(-10deg); }
+            0% { transform: rotate(-8deg); }
+            50% { transform: rotate(8deg); }
+            100% { transform: rotate(-8deg); }
         }
 
-        /* Floating Hearts */
         .heart {
             position: absolute;
             color: #ff69b4;
-            font-size: 20px;
+            font-size: 18px;
             animation: floatUp 6s linear infinite;
         }
 
         @keyframes floatUp {
-            0% {
-                transform: translateY(100vh);
-                opacity: 0;
-            }
-            50% {
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(-10vh);
-                opacity: 0;
-            }
+            0% { transform: translateY(100vh); opacity: 0; }
+            50% { opacity: 1; }
+            100% { transform: translateY(-10vh); opacity: 0; }
         }
 
+        /* Hide YouTube player */
+        #player {
+            position: absolute;
+            width: 0;
+            height: 0;
+            opacity: 0;
+        }
     </style>
 </head>
+
 
 <body>
 
     <h1>Hello Birthday Girl 💕</h1>
     <p>I made something really special for you 🎀</p>
-    <div class="volume-msg">🔊 Turn your volume up ✨</div>
+    <div class="volume-msg">🔊 Tap the button 💖</div>
+    <div class="volume-msg">Current favourite Song 💖</div>
+     <div class="volume-msg">Listen through it all go to next page 💖</div>
+     <div class="volume-msg">May be need to wait a little</div>
 
     <div class="swing-container">
         <div class="rope"></div>
         <div class="seat"></div>
-        <img class="kitty" src="Assets/Screenshot_2026-02-26_230239-removebg-preview.png" alt="Hello Kitty">
+        <img class="kitty" src="Assets/Screenshot_2026-02-26_230239-removebg-preview.png">
     </div>
 
-    <button onclick="goToSurprise()">Click Here 🎁</button>
-
-    <!-- Music -->
-    <audio autoplay loop>
-        <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_9d5b0f6d50.mp3?filename=romantic-background-112191.mp3" type="audio/mpeg">
+    <button onclick="startExperience()">Click Here 🎁</button>
+    
+ <audio id="rickAudio" autoplay loop>
+        <source src="Assets/Wheatus - Teenage Dirtbag  Paste Studios, NYC (2019) - Paste Magazine.mp3" type="audio/mpeg">
     </audio>
 
-    <!-- Script -->
+    <!-- YouTube Player -->
+    <div id="player"></div>
+
+    <script src="Assets/Wheatus - Teenage Dirtbag  Paste Studios, NYC (2019) - Paste Magazine.mp3"></script>
+
     <script>
-        function goToSurprise() {
-            window.location.href = "chaos.html";
+        let player;
+
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('player', {
+                videoId: "PUT_VIDEO_ID_HERE", // 👈 replace this
+                playerVars: {
+                    autoplay: 0,
+                    controls: 0,
+                    loop: 1,
+                    playlist: "PUT_VIDEO_ID_HERE"
+                }
+            });
+        }
+
+        function startExperience() {
+            if (player) {
+                player.playVideo(); // works because user clicked
+            }
+
+            setTimeout(() => {
+                window.location.href = "rickroll.html";
+            }, 2500);
         }
 
         function createHeart() {
@@ -165,15 +173,12 @@
             heart.classList.add("heart");
             heart.innerHTML = "💖";
             heart.style.left = Math.random() * 100 + "vw";
-            heart.style.animationDuration = (3 + Math.random() * 3) + "s";
             document.body.appendChild(heart);
 
-            setTimeout(() => {
-                heart.remove();
-            }, 6000);
+            setTimeout(() => heart.remove(), 6000);
         }
 
-        setInterval(createHeart, 400);
+        setInterval(createHeart, 500);
     </script>
 
 </body>
